[gd_scene load_steps=44 format=2]

[ext_resource path="res://GameObjects/Rock.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameObjects/Pickup.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameObjects/LaserEye.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Art/MuzzleFlash1.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/NightSky.png" type="Texture" id=5]
[ext_resource path="res://Assets/Audio/Peashooter1.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Art/TurretBarrel1_blended.png" type="Texture" id=7]
[ext_resource path="res://Assets/Art/LaserTurret1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Art/RoundGodotIcon.png" type="Texture" id=9]
[ext_resource path="res://Assets/Art/LaserLightRay.png" type="Texture" id=10]
[ext_resource path="res://Assets/Imported/Space Shooter Pack/PNG/Lasers/laserGreen14.png" type="Texture" id=11]
[ext_resource path="res://Assets/Imported/Kenney Space.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Assets/Imported/Space Shooter Pack/PNG/Lasers/laserBlue10.png" type="Texture" id=13]
[ext_resource path="res://Background/BackgroundStarHandler.gd" type="Script" id=14]
[ext_resource path="res://BulletHandler.gd" type="Script" id=15]
[ext_resource path="res://EnemySpawner.gd" type="Script" id=16]
[ext_resource path="res://DevTools/UI/FPSlabel.gd" type="Script" id=17]
[ext_resource path="res://Player/LaserTurret.gd" type="Script" id=18]
[ext_resource path="res://MainGame.gd" type="Script" id=19]
[ext_resource path="res://Player/Player.gd" type="Script" id=20]
[ext_resource path="res://InGameUI/PlayerStatsLabel.gd" type="Script" id=21]
[ext_resource path="res://Assets/Imported/KenneySpaceFont.tres" type="DynamicFont" id=22]
[ext_resource path="res://Player/MuzzleFlashLight.gd" type="Script" id=23]
[ext_resource path="res://RockHandler.gd" type="Script" id=24]
[ext_resource path="res://Player/Laser.gd" type="Script" id=25]
[ext_resource path="res://Player/TurretBarrel.gd" type="Script" id=26]
[ext_resource path="res://DevTools/UI/MousePosLabel.gd" type="Script" id=28]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="ParticlesMaterial" id=2]
trail_divisor = 32
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 2.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="CircleShape2D" id=3]
radius = 29.0528

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.259259, 0.518519, 0.77037, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 0.925781, 0.913068, 0.112106, 1, 0.921875, 0.752174, 0.172852, 1, 0.910156, 0.117325, 0.117325, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
lifetime_randomness = 0.5
trail_divisor = 2
emission_shape = 2
emission_box_extents = Vector3( 1, 16, 1 )
flag_disable_z = true
spread = 75.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 200.0
initial_velocity_random = 0.3
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 2.0
color_ramp = SubResource( 5 )

[sub_resource type="Animation" id=7]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.5, 0.5 ), Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.1, 1.0, 0.1 ]
}

[sub_resource type="Animation" id=8]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.5, 1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=9]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0, 360.0 ]
}

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 12 )

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.296296, 0.696296 )
colors = PoolColorArray( 1, 0.969854, 0.782609, 1, 1, 0.866508, 0.478261, 1, 1, 0.556641, 0, 1 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 64.0
initial_velocity_random = 0.51
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 12 )

[sub_resource type="ParticlesMaterial" id=14]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 34.69
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="ParticlesMaterial" id=15]
emission_shape = 2
emission_box_extents = Vector3( 1000, 1000, 1 )
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 12 )

[node name="MainGame" type="Node2D"]
script = ExtResource( 19 )

[node name="Background" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 540 )
texture = ExtResource( 5 )

[node name="BackgroundStarHandler" type="Node2D" parent="."]
script = ExtResource( 14 )

[node name="RockSpawner" type="Node2D" parent="."]
script = ExtResource( 24 )

[node name="EnemySpawner" type="Node2D" parent="."]
script = ExtResource( 16 )

[node name="BulletHandler" type="Node2D" parent="."]
script = ExtResource( 15 )

[node name="BulletSpawnSound" type="AudioStreamPlayer" parent="BulletHandler"]
stream = ExtResource( 6 )

[node name="BulletSpawnDelay" type="Timer" parent="BulletHandler"]
one_shot = true

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 900, 500 )
collision_mask = 6
script = ExtResource( 20 )

[node name="PlayerShape" type="CollisionPolygon2D" parent="Player"]
polygon = PoolVector2Array( 6.1, -12, 10.1, -12, 31, -10.9, 31, -9.2, 48.3, 0, 47.6, 3, 43.5, 3, 29.5, 11, 16.2, 11, 6.8, 11.9, -2.2, 25.3, -5, 24.5, -5, 21.5, -9.3, 13, -10.7, 13, -27.4, -0.299999, -26.4, -3, -23.5, -3, -17, -6.2, -17, -7.3, -15.4, -12, -10.5, -12, -10, -12.2, -10, -13.6, -5, -21.6, -5, -24.5, -2.1, -25.3 )

[node name="ThrusterParticle" type="Particles2D" parent="Player/PlayerShape"]
material = SubResource( 1 )
position = Vector2( -25, 0 )
scale = Vector2( 0.5, 0.5 )
z_index = -1
amount = 32
lifetime = 0.5
randomness = 0.5
process_material = SubResource( 2 )
texture = ExtResource( 13 )

[node name="PlayerRoundShape" type="CollisionShape2D" parent="Player"]
visible = false
shape = SubResource( 3 )
disabled = true

[node name="PlayerSprite" type="Sprite" parent="Player"]
visible = false
texture = ExtResource( 9 )

[node name="PlayerSprite2" type="Sprite" parent="Player"]
texture = ExtResource( 4 )

[node name="TurretBarrel" type="Sprite" parent="Player/PlayerSprite2"]
position = Vector2( 25, 0 )
scale = Vector2( 0.2, 0.2 )
z_index = 1
texture = ExtResource( 7 )
offset = Vector2( 29.5957, -2.85719 )
script = ExtResource( 26 )
__meta__ = {
"_edit_group_": true
}

[node name="MuzzlePosition" type="Position2D" parent="Player/PlayerSprite2/TurretBarrel"]
position = Vector2( 75, 0 )
scale = Vector2( 5, 5 )
z_index = 2

[node name="MuzzleFlashParticle" type="Particles2D" parent="Player/PlayerSprite2/TurretBarrel"]
show_behind_parent = true
position = Vector2( 75, 0 )
emitting = false
amount = 200
lifetime = 0.2
one_shot = true
explosiveness = 0.7
process_material = SubResource( 6 )

[node name="MuzzleFlashLight" type="Light2D" parent="Player/PlayerSprite2/TurretBarrel"]
position = Vector2( 75, 0 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
color = Color( 1, 0.94902, 0.407843, 1 )
energy = 0.1
script = ExtResource( 23 )

[node name="MFLightTimer" type="Timer" parent="Player/PlayerSprite2/TurretBarrel/MuzzleFlashLight"]
wait_time = 0.2
one_shot = true

[node name="MFLightAnimation" type="AnimationPlayer" parent="Player/PlayerSprite2/TurretBarrel/MuzzleFlashLight"]
autoplay = "MFLight"
anims/MFLight = SubResource( 7 )

[node name="MuzzleFlashSprite" type="Sprite" parent="Player/PlayerSprite2/TurretBarrel"]
position = Vector2( 95, 0 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 4 )

[node name="MFSpriteAnimation" type="AnimationPlayer" parent="Player/PlayerSprite2/TurretBarrel/MuzzleFlashSprite"]
autoplay = "MFSprite"
anims/MFSprite = SubResource( 8 )

[node name="PlayerCamera" type="Camera2D" parent="Player"]
current = true
smoothing_enabled = true

[node name="PlayerAnimation" type="AnimationPlayer" parent="Player"]
anims/BaseRotation = SubResource( 9 )

[node name="Laser" type="Line2D" parent="Player"]
z_index = 2
points = PoolVector2Array( 0, 0 )
width = 1.0
default_color = Color( 0.0313726, 1, 0, 1 )
end_cap_mode = 2
antialiased = true
script = ExtResource( 25 )
__meta__ = {
"_edit_group_": true
}

[node name="LaserCharge" type="TextureProgress" parent="Player/Laser"]
margin_left = -8.31628
margin_top = 412.875
margin_right = 91.6837
margin_bottom = 512.875
rect_pivot_offset = Vector2( 50, 50 )
max_value = 60.0
texture_progress = ExtResource( 4 )
fill_mode = 4
tint_progress = Color( 0.941176, 0.403922, 0.403922, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LaserStatus" type="Label" parent="Player/Laser"]
margin_left = -23.3784
margin_top = -73.6832
margin_right = 16.6216
margin_bottom = -59.6832
custom_fonts/font = SubResource( 10 )
text = "!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LaserImpact" type="Particles2D" parent="Player/Laser"]
position = Vector2( -200.281, 18.6356 )
z_index = 1
emitting = false
lifetime = 0.15
randomness = 0.51
process_material = SubResource( 13 )

[node name="LaserImpactLight" type="Light2D" parent="Player/Laser/LaserImpact"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )
color = Color( 0.172549, 1, 0, 1 )

[node name="LaserTurret" type="Sprite" parent="Player/Laser"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 8 )
script = ExtResource( 18 )

[node name="LaserLight" type="Light2D" parent="Player/Laser"]
visible = false
enabled = false
texture = ExtResource( 10 )
offset = Vector2( 990, 0 )
color = Color( 1, 0.254902, 0.254902, 1 )

[node name="PlayerHealth" type="Label" parent="Player"]
margin_left = 14.0646
margin_top = 388.538
margin_right = 90.0646
margin_bottom = 440.538
custom_fonts/font = ExtResource( 22 )
text = "HP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OLDPlayer2Inertia" type="RigidBody2D" parent="."]
position = Vector2( 900, 500 )
collision_mask = 6

[node name="Rock" parent="." instance=ExtResource( 1 )]

[node name="Pickup" parent="." instance=ExtResource( 2 )]

[node name="SomethingAwesome" type="Particles2D" parent="."]
visible = false
position = Vector2( 283.38, 322.57 )
amount = 200
process_material = SubResource( 14 )

[node name="Rain" type="Particles2D" parent="."]
visible = false
position = Vector2( 800.587, 504.588 )
amount = 32
process_material = SubResource( 15 )

[node name="LaserEye" parent="." instance=ExtResource( 3 )]

[node name="DevUILayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="DevUILayer"]
margin_right = 337.0
margin_bottom = 97.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPSLabel" type="Label" parent="DevUILayer/MarginContainer"]
margin_top = 41.0
margin_right = 337.0
margin_bottom = 55.0
text = "FPS: "
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MousePosLabel" type="Label" parent="DevUILayer"]
margin_left = 0.540359
margin_top = 92.3343
margin_right = 337.54
margin_bottom = 106.334
text = "Global Mouse Position:"
script = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InGameUILayer" type="CanvasLayer" parent="."]

[node name="PlayerStatsLabel" type="Label" parent="InGameUILayer"]
margin_left = 226.569
margin_top = 20.4607
margin_right = 266.569
margin_bottom = 34.4607
custom_fonts/font = SubResource( 16 )
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Player/PlayerSprite2/TurretBarrel/MuzzleFlashLight/MFLightTimer" to="Player/PlayerSprite2/TurretBarrel/MuzzleFlashLight" method="_on_MuzzleFlashTimer_timeout"]
